--- a/src/ui/feature/subreddit/SubredditAvatar.pug
+++ b/src/ui/feature/subreddit/SubredditAvatar.pug
@@ -26,9 +26,8 @@ style.
 		border-radius 50%
 		object-fit cover
 	.subreddit-avatar-image-not-available
-		background var(--c-text-strong)
+		background gray
 	.subreddit-avatar-image-size-large
-		border-radius 10px
 		height 64px
 	.subreddit-avatar-image-size-medium
 		height 32px
