--- a/src/ui/feature/user/UserAvatar.pug
+++ b/src/ui/feature/user/UserAvatar.pug
@@ -85,8 +85,8 @@ style.
 		&:hover
 			border-color var(--c-hint-normal)
 	.user-avatar-size-small
-		height 24px
+		width 24px
 	.user-avatar-size-medium
-		height 36px
+		width 36px
 	.user-avatar-size-large
-		height 132px
+		width 132px
