--- a/src/ui/common/MediaPlayer.pug
+++ b/src/ui/common/MediaPlayer.pug
@@ -184,7 +184,7 @@ style.
 		display flex
 		font-feature-settings 'tnum'
 		gap 8px
-		margin-top 1em
+		margin-top 10px
 		:fullscreen &
 			bottom 0
 			left 0
