--- a/src/ui/common/TextHTML.pug
+++ b/src/ui/common/TextHTML.pug
@@ -4,7 +4,7 @@ script.
 	# Display pictures instead of links where New Reddit does so.
 	formatted =
 		html
-			.replace(/<a href="https?:\/\/redd\.it\/(?<path>[^"]*)"[^>]*>/g, '<a href="/p/$<path>">')
+			.replace(/<a href="https?:\/\/redd\.it\/(?<path>[^"]*)"[^>]*>/g, '<a href="/post/$<path>">')
 			.replace(/<a href="https?:\/\/(?:(?:new|np|old|www)\.)?reddit\.com\/(?<path>[^"]*)"[^>]*>/g, '<a href="/$<path>">')
 			.replace(/<a href="https:\/\/(?<subdomain>preview)\.redd\.it\/(?<filepath>[^"]+)">(?<linktext>[^<]*)<\/a>/g, '<a href="https://$<subdomain>.redd.it/$<filepath>" target="_blank"><img src="https://$<subdomain>.redd.it/$<filepath>"></a>')
 
