--- a/src/ui/feature/subreddit/SubredditPage.pug
+++ b/src/ui/feature/subreddit/SubredditPage.pug
@@ -4,8 +4,8 @@ script.
 
 	import Button from '../../common/Button.pug'
 	import CenterLayout from '../../common/layout/CenterLayout.pug'
+	import Feed from '../feed/Feed.pug'
 	import Post from '../post/Post.pug'
-	import PostsList from '../posts/PostsList.pug'
 
 	import SubredditInfo from './SubredditInfo.pug'
 	import SubredditModerators from './SubredditModerators.pug'
@@ -15,8 +15,11 @@ script.
 	export subreddit_name = null
 
 	export posts_sort = null
+	export posts_search_query = null
+	export posts_time_range = null
 	
 	export post_short_id = null
+	export comment_parent_count = null
 	export comment_short_id = null
 	export comments_sort = null
 
@@ -46,11 +49,11 @@ CenterLayout
 						Button(link='/r/{subreddit_name}/wiki/index' text='Wiki')
 		nav.subreddit-posts
 			{#key posts_sort}
-				PostsList(type='subreddit' subreddit_name={subreddit_name} posts_sort={posts_sort} selected_post_short_id={post_short_id})
+				Feed(type='subreddit' subreddit_name={subreddit_name} search_query={posts_search_query} time_range={posts_time_range} sort={posts_sort} selected_post_short_id={post_short_id})
 		{#if post_short_id}
 			{#key post_short_id}
 				{#key comment_short_id}
-					Post(comments_sort={comments_sort} focus_comment_short_id={comment_short_id} short_id={post_short_id})
+					Post(comments_sort={comments_sort} focus_comment_parent_count={comment_parent_count} focus_comment_short_id={comment_short_id} short_id={post_short_id})
 		{:else}
 			SubredditInfo(name={subreddit_name})
 			{#if widgets}
@@ -63,10 +66,17 @@ CenterLayout
 				br
 				br
 				span(style='color:var(--c-text-weak)') "{subreddit.header_title}"
+nav#home-menu
+	a(href='/')
+		img(alt='' src='/icon_frog.png')
 
 style.
+	#home-menu
+		top 1em
+		left 1em
+		position fixed
 	.subreddit
-		width 560px
+		width 480px
 	.subreddit-nav
 		position fixed
 		right calc(50% + 336px)
