--- a/src/ui/feature/subreddit/SubredditWidget.pug
+++ b/src/ui/feature/subreddit/SubredditWidget.pug
@@ -1,5 +1,5 @@
 script.
-	import { relativize_url } from '../../app/routing/AppURL.coffee'
+	import { relativize_url } from '../../app/routing/url.coffee'
 
 	import Button from '../../common/Button.pug'
 	import TextHTML from '../../common/TextHTML.pug'
@@ -33,7 +33,7 @@ script.
 				{#if item.children}
 					details
 						summary {item.text}
-						ol
+						ol.subreddit-widget-menu-list
 							{#each item.children as child}
 								Button(link={relativize_url(child.url)} text={child.text})
 				{:else}
@@ -51,11 +51,19 @@ script.
 style.
 	.subreddit-widget-image
 		border-radius 10px
+	.subreddit-widget-links
+		display flex
+		flex-flow row wrap
+		gap 0.5em
 	.subreddit-widget-menu
 		align-items flex-start
 		display flex
 		flex-flow column nowrap
 		gap 10px
+	.subreddit-widget-menu-list
+		display flex
+		flex-flow row wrap
+		gap 0.5em
 	.subreddit-widget-post-flairs
 		display flex
 		flex-flow row wrap
