--- a/src/ui/feature/user/UserPage.pug
+++ b/src/ui/feature/user/UserPage.pug
@@ -1,13 +1,14 @@
 script.
 	import SplitLayout from '../../common/layout/SplitLayout.pug'
+	import Feed from '../feed/Feed.pug'
+	import FeedInfoCard from '../feed/FeedInfoCard.pug'
 	import Post from '../post/Post.pug'
-	import PostsList from '../posts/PostsList.pug'
-	import PostsListInfo from '../posts/PostsListInfo.pug'
 	import UserCommentsList from './UserCommentsList.pug'
 
 	export user_name = null
 
 	export posts_sort = null
+	export posts_time_range = null
 	
 	export post_short_id = null
 	export comment_short_id = null
@@ -17,13 +18,13 @@ svelte:head
 	title u/{user_name}
 SplitLayout
 	svelte:fragment(slot='left')
-		PostsListInfo(type='user' user_name={user_name})
-		PostsList(type='user' user_name={user_name} posts_sort={posts_sort} selected_post_short_id={post_short_id})
+		FeedInfoCard(type='user' user_name={user_name})
+		Feed(type='user' user_name={user_name} sort={posts_sort} time_range={posts_time_range} selected_post_short_id={post_short_id})
 	svelte:fragment(slot='right')
 		{#if post_short_id}
 			{#key post_short_id}
 				Post(comments_sort={comments_sort} focus_comment_short_id={comment_short_id} short_id={post_short_id})
 		{:else}
-			UserCommentsList(name={user_name})
+			UserCommentsList(name={user_name} sort={posts_sort} time_range={posts_time_range})
 
 style.
