--- a/src/ui/feature/post/Post.pug
+++ b/src/ui/feature/post/Post.pug
@@ -151,15 +151,17 @@ svelte:head
 							menu.post-content-actions
 								Button(key='e' link={relativize_url(post.url)} new_tab={true} text='View')
 				{:else if post.format === 'prediction'}
-					ol.post-predictions
+					ol.md.post-predictions
 						{#each post.tournament_data.predictions as prediction}
-							h2.post-prediction-title {prediction.title}
+							strong.post-prediction-title {prediction.title}
 							dl.post-prediction-options
 								{#each prediction.options as option}
-									li
+									li.post-prediction-option
 										dt
 											meter(max={prediction.total_stake_amount} min={0} value={option.total_amount})
 										dd {option.text}
+					menu.post-content-actions
+						Button(key='e' link={post.url} new_tab={true} text='View on Reddit')
 				{:else if post.format === 'self'}
 					{#if !post.selftext.length}
 						.post-selftext-empty
@@ -268,8 +270,16 @@ style.
 		color var(--c-text-weak)
 		display flex
 		gap 6px
-	.post-prediction-options > li
+	.post-predictions
 		display flex
+		flex-flow column nowrap
+		gap 1em
+	.post-prediction-option
+		align-items center
+		display flex
+		gap 1em
+		& meter
+			width 200px
 	.post-selftext
 		margin-bottom 2em
 	.post-title
