post: revise spoiler styling

--- a/src/ui/app/stylesheet.styl
+++ b/src/ui/app/stylesheet.styl
@@ -238,10 +238,10 @@ kbd
 // Spoilers
 .md-spoiler-text
 	background black
-	border-radius 3px
+	border-radius 5px
 	color transparent
 	cursor default
-	transition all 0.125s
+	padding 1px
 	*
 		opacity 0
 	&:hover
